@@ -1,8 +1,11 @@
-CHANGES.txt - 02/14/2002
+CHANGES.txt - 02/20/2002
 ------------------------
 
 CHANGES IN CUPS V1.1.15
 
+	- The image filters looked for the "orientation" option
+	  instead of the correctly named "orientation-requested"
+	  option.
 	- The cupsEncodeOptions() function now handles mixed
 	  integers and ranges.
 	- New translation guide for developers to provide native
